--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Buku Cerita Dukungan untuk Jelita
+   Buku Cerita untuk Jelita
   </title>
   <script src="https://cdn.tailwindcss.com">
   </script>
@@ -20,11 +20,11 @@
    <header class="bg-blue-200 p-6 flex items-center justify-center">
     <img alt="Ilustrasi beruang putih lucu dengan ekspresi ceria, duduk sambil melambaikan tangan" class="w-20 h-20" height="80" src="https://storage.googleapis.com/a1aa/image/dcb95d54-2180-496f-c3ac-7a33512ecbc8.jpg" width="80"/>
     <h1 class="text-3xl font-bold text-blue-900 ml-4 select-none">
-     Buku Cerita Dukungan untuk Jelita
+     Buku Cerita untuk Jelita
     </h1>
    </header>
    <section class="flex-1 p-6 text-center" id="story-container">
-    <img alt="Beruang putih lucu sedang belajar dengan buku dan laptop di meja kayu, latar belakang ruang belajar cerah" class="mx-auto rounded-xl shadow-md mb-6 max-w-full h-auto" height="200" id="story-image" src="https://storage.googleapis.com/a1aa/image/17774fa2-84e8-4564-fa14-d19ebcbf05b4.jpg" width="300"/>
+    <img alt="Beruang putih lucu sedang belajar dengan buku dan laptop di meja kayu, latar belakang ruang belajar cerah" class="mx-auto rounded-xl shadow-md mb-6 max-w-full h-auto" height="200" id="story-image" src="https://lh3.googleusercontent.com/gg-dl/AJfQ9KQb5M3qzhftIbTSOcbMiJzyriRhkebb0FmNgsN9FO7iBPHilaOQ7qhS5E4-DeTew4-uecNV1ocNmPyn7gDXv6RfPpQwbaJd5MA_a1s1-jnlYAiSfDzp3wcYakZzOrDPKZNATFkDhwN85ZNhETDoaar7oOeYdLQOWjQQyu8ZASQfqqZAew=s1024" width="300"/>
     <p class="text-lg text-gray-800 leading-relaxed select-text" id="story-text">
      Halo Jelita! Aku beruang putih lucu yang ingin menemanimu melewati sidang kelulusan Teknik Industri Pertanian. Kamu pasti bisa!
     </p>
