--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
  <body class="bg-gradient-to-b from-blue-50 to-white min-h-screen flex flex-col items-center justify-center p-4">
   <main class="max-w-md w-full bg-white rounded-3xl shadow-lg overflow-hidden flex flex-col">
    <header class="bg-blue-200 p-6 flex items-center justify-center">
-    <img alt="Ilustrasi beruang putih lucu dengan ekspresi ceria, duduk sambil melambaikan tangan" class="w-20 h-20" height="80" src="https://storage.googleapis.com/a1aa/image/dcb95d54-2180-496f-c3ac-7a33512ecbc8.jpg" width="80"/>
+    <img alt="Ilustrasi beruang putih lucu dengan ekspresi ceria, duduk sambil melambaikan tangan" class="w-20 h-20" height="80" src="Beruang_greeting.png" width="80"/>
     <h1 class="text-3xl font-bold text-blue-900 ml-4 select-none">
      Buku Cerita untuk Jelita
     </h1>
    </header>
    <section class="flex-1 p-6 text-center" id="story-container">
-    <img alt="Beruang putih lucu sedang belajar dengan buku dan laptop di meja kayu, latar belakang ruang belajar cerah" class="mx-auto rounded-xl shadow-md mb-6 max-w-full h-auto" height="200" id="story-image" src="https://lh3.googleusercontent.com/gg-dl/AJfQ9KQb5M3qzhftIbTSOcbMiJzyriRhkebb0FmNgsN9FO7iBPHilaOQ7qhS5E4-DeTew4-uecNV1ocNmPyn7gDXv6RfPpQwbaJd5MA_a1s1-jnlYAiSfDzp3wcYakZzOrDPKZNATFkDhwN85ZNhETDoaar7oOeYdLQOWjQQyu8ZASQfqqZAew=s1024" width="300"/>
+    <img alt="Beruang putih lucu sedang belajar dengan buku dan laptop di meja kayu, latar belakang ruang belajar cerah" class="mx-auto rounded-xl shadow-md mb-6 max-w-full h-auto" height="200" id="story-image" src="Beruang_page_1.png" width="300"/>
     <p class="text-lg text-gray-800 leading-relaxed select-text" id="story-text">
      Halo Jelita! Aku beruang putih lucu yang ingin menemanimu melewati sidang kelulusan Teknik Industri Pertanian. Kamu pasti bisa!
     </p>
@@ -49,49 +49,49 @@
    const pages = [
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+sedang+belajar&font=Baloo+2&fontSize=24",
+          "Beruang_page_1.png",
         alt: "Beruang putih lucu sedang belajar dengan buku dan laptop di meja kayu, latar belakang ruang belajar cerah",
         text:
           "Halo Jelita! Aku beruang putih lucu yang ingin menemanimu melewati sidang kelulusan Teknik Industri Pertanian. Kamu pasti bisa!",
       },
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+memegang+buku&font=Baloo+2&fontSize=24",
+          "Beruang_page_2.png",
         alt: "Beruang putih lucu memegang buku besar berwarna biru dengan ekspresi semangat, latar belakang perpustakaan penuh rak buku",
         text:
           "Ingat, setiap halaman yang kamu baca dan setiap tugas yang kamu kerjakan adalah langkah menuju kesuksesanmu. Terus semangat ya!",
       },
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+berjalan+di+hutan&font=Baloo+2&fontSize=24",
+          "Beruang_page_3.png",
         alt: "Beruang putih lucu berjalan di hutan bersalju dengan ekspresi penuh harapan, pepohonan putih dan langit biru cerah",
         text:
           "Kadang perjalanan terasa berat, tapi jangan lupa untuk beristirahat dan menikmati keindahan di sekitarmu. Kamu tidak sendiri.",
       },
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+berpelukan&font=Baloo+2&fontSize=24",
+          "Beruang_page_4.png",
         alt: "Beruang putih lucu memeluk boneka beruang kecil dengan ekspresi hangat dan penuh kasih sayang, latar belakang kamar tidur nyaman",
         text:
           "Aku selalu ada untukmu, memberikan pelukan hangat dan dukungan tanpa henti. Kamu kuat dan mampu melewati semua ini.",
       },
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+berdiri+di+puncak+gunung&font=Baloo+2&fontSize=24",
+          "Beruang_page_5.png",
         alt: "Beruang putih lucu berdiri di puncak gunung dengan tangan terangkat, latar belakang matahari terbit dan langit oranye keemasan",
         text:
           "Bayangkan betapa bangganya kamu nanti saat berhasil melewati sidang ini. Puncak kesuksesan sudah di depan mata!",
       },
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+tersenyum+dengan+bintang&font=Baloo+2&fontSize=24",
+          "Beruang_page_6.png",
         alt: "Beruang putih lucu tersenyum sambil memegang bintang kecil berkilauan, latar belakang langit malam penuh bintang",
         text:
           "Setiap bintang di langit adalah harapan dan doa yang mendukungmu. Jangan pernah ragu, kamu adalah bintang yang bersinar.",
       },
       {
         image:
-          "https://placehold.co/300x200/png?text=Beruang+putih+melompat+bahagia&font=Baloo+2&fontSize=24",
+          "Beruang_page_7.png",
         alt: "Beruang putih lucu melompat dengan ekspresi bahagia dan penuh semangat, latar belakang padang salju cerah dengan sinar matahari",
         text:
           "Selamat sidang, Jelita! Aku yakin kamu akan sukses besar. Teruslah melangkah dengan percaya diri dan hati yang penuh semangat!",
